# ARC-project-template

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: actions.yml  update_template.yml
tests/: test_add.py
