[tool.poetry]
name = "todo_packagename"  # TODO - rename src/todo_packagename and change here to reflect
version = "0.1.0"
description = ""  # TODO
authors = ["Applied Research Centre, The Alan Turing Institute <arc@turing.ac.uk>"]  # TODO
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"  # TODO

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.11.1"
black = "^23.7.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.isort]
profile = "black"
